--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
+    //implementation 'com.google.android.material:material:1.1.0-alpha09' //현위치
+    implementation 'com.google.android.gms:play-services-location:15.0.0'//현위치
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
