--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".hotItem"></activity>
+        <activity android:name=".hotItem" />
         <activity android:name=".request" />
         <activity android:name=".Information" />
         <activity android:name=".Farm" />
