x,y 좌표 배열로 불러오기 성공

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".coordinates"></activity>
+        <activity android:name=".Crop3" />
         <activity android:name=".Test" />
         <activity android:name=".Crop2" />
         <activity android:name=".hotItem" />
