--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".coordinates"></activity>
+        <activity android:name=".coordinates" />
         <activity android:name=".Crop2" />
         <activity android:name=".hotItem" />
         <activity android:name=".request" />
