11월 26일 중간 결산 (seller에서 이어지는 activity인 check, check2 생성/ main에서 지도와 함께 주소 출력 가능)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Check2"></activity>
+        <activity android:name=".Check"></activity>
+        <activity android:name=".Check2" />
         <activity android:name=".Buyer" />
         <activity android:name=".coordinates" />
         <activity android:name=".Crop2" />
