11/27 효진신지 합체!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ManagementActivity"></activity>
+        <activity android:name=".Information2"></activity>
+        <activity android:name=".CheckTitle" />
+        <activity android:name=".ManagementActivity" />
         <activity android:name=".Check" />
         <activity android:name=".Check2" />
         <activity android:name=".Buyer" />
