--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Information2"></activity>
+        <activity android:name=".InformationB"></activity>
+        <activity android:name=".Information2" />
         <activity android:name=".CheckTitle" />
         <activity android:name=".ManagementActivity" />
         <activity android:name=".Check" />
