seller - 검색 부분 복구 map - 구글제공코드로 변경, 주소 마커 기능까지 완료

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
     }
 }
 
+dependencies {
+    implementation 'com.google.android.libraries.places:places-compat:2.0.0'
+}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
